A new version of PHPT runner is out. It adds TestsRunner which can be used to run all .phpt files from a given directory. PhptRunner now reports parse errors from a file as a failure (instead of propagating an exception).

For complete list of changes since previous version, see CHANGELOG.md.