@@ -51,6 +51,7 @@ These sections work exactly as described in the documentation. If you notice any
 * --CGI--
 * --XFAIL--
 * --FLAKY--
+* --EXPECTHEADERS--
 * --EXPECT--
 * --EXPECT_EXTERNAL--
 * --EXPECTREGEX--
@@ -64,7 +65,6 @@ These sections are used by PhptRunner but there are some differences from behavi
 * --EXTENSIONS-- (we do not try to load those extensions, we just skip the test if any of those extensions is not loaded)
 * --GET-- (it forces the use of the cgi binary but is not passed to it)
 * --COOKIE-- (it forces the use of the cgi binary but is not passed to it)
-* --EXPECTHEADERS-- (it forces the use of the cgi binary but is not checked)
 * --EXPECTF-- (regular expressions %r...%r are not supported)
 * --EXPECTF_EXTERNAL-- (regular expressions %r...%r are not supported)
 
